# IRIS

./: .gitignore  404.html  LICENSE.md  README.md  create_venv.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  docs_off.yml
chem/: polaris_dust.nk
docs/: guide.md  index.md  reference.md
docs/reference/: chemistry.md  (+8 more)
iris/: arepo_processing.py  arepo_processing_write.py  chemistry.py  cube_processing.py  hyper.py  observation.py  reversion.py  training.py  visualization.py
javascripts/: mathjax.js
jobs/: fig_balance_OT_background.py  fig_balance_OT_background.sh  fig_balance_OT_vs_ALT.py  fig_balance_OT_vs_ALT.sh  fig_cmz_overview.py  fig_cmz_overview.sh  fig_continuum_temperature.py  fig_continuum_temperature.sh  fig_failure_modes.py  fig_failure_modes.sh  fig_formal_vs_smooth.py  fig_formal_vs_smooth.sh  fig_loss_trajectory.py  fig_loss_trajectory.sh  fig_no_dust_vs_dust.py  fig_no_dust_vs_dust.sh  fig_optically_thin_vs_thick.py  fig_optically_thin_vs_thick.sh  fig_polaris_vs_iris.py  fig_polaris_vs_iris.sh  fig_polaris_vs_iris_no_dust.py  fig_radmc_vs_iris.py  fig_radmc_vs_iris.sh  fig_radmc_vs_iris_parallel.py  fig_simple_vs_synth.py  fig_simple_vs_synth.sh  fig_sims_overview.py  fig_sims_overview.sh  fig_speed_test.py  fig_speed_test.sh  fig_synthetic_reversions.py  fig_synthetic_reversions.sh  fig_true_reversions.py  fig_true_reversions.sh  gen_data_full_cone.py  gen_data_full_cone.sh  gen_data_litter.py  gen_data_litter.sh  gen_data_sims_overview.py  gen_data_sims_overview.sh  (+14 more)
search/: search_index.json
(+9 files in other folders)
